2006-09-21 Braden McDaniel  <braden@endoframe.com>

	Clean up of breakage from Windows font support check-in.

	* configure.ac: Check to see whether FreeType function callback
	signatures need const.
	* src/libopenvrml/openvrml/vrml97node.cpp
	(text_node::update_face()): Use
	boost::ignore_unused_variable_warning to quell warnings about
	scope_guard variables.  Use unsigned_char_string instead of
	obsoleted FcChar8_string type.  Revert face_index to an int; the
	fontconfig API doesn't like FT_Long.
	(moveTo_(const FT_Vector *, void *)): Use OPENVRML_FT_CONST macro
	in function signature.
	(lineTo_(const FT_Vector *, void *)): Use OPENVRML_FT_CONST macro
	in function signature.
	(conicTo_(const FT_Vector *, const FT_Vector *, void *)): Use
	OPENVRML_FT_CONST macro in function signature.
	(cubicTo_(const FT_Vector *, const FT_Vector *, const FT_Vector *,
	void *)): Use OPENVRML_FT_CONST macro in function signature.

2006-09-19 Braden McDaniel  <braden@endoframe.com>

	* ide-projects/Makefile.am (VISUALC8_0_FILES): Added config
	headers and resource scripts to the distribution.

2006-09-19 Braden McDaniel  <braden@endoframe.com>

	Removed Visual C++ 7.1 project files.

	* ide-projects/Makefile.am (VISUALC7_1_FILES): Removed.
	(EXTRA_DIST): Removed reference to VISUALC7_1_FILES.
	* ide-projects/Windows/VisualC7_1/OpenVRML/OpenVRML.sln: Removed
	file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/antlr/antlr.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml-config.h:
	Removed file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml-gl/openvrml-gl-config.h:
	Removed file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml-gl/openvrml-gl.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/sdl-viewer/sdl-viewer.vcproj:
	Removed file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/test-openvrml/test-openvrml.vcproj:
	Removed file.
